<resources>
    <string name="app_name">Cholo Kini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_cholo_kini">Welcome To Cholo Kini !</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="products">Products</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="product_price">Product Price</string>
    <string name="product_amount">Product Amount</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="upload_product">Upload Product</string>
</resources>