<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
       app:showAsAction="always"
        android:icon="@drawable/ic_menu_dot"
        android:title="@string/menu">

        <menu>

            <item
                android:icon="@drawable/ic_report"
                android:title="@string/report"
                android:id="@+id/menu_report"
                />

            <item
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"
                android:id="@+id/menu_settings"/>

            <item
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"
                android:id="@+id/menu_logout"/>


        </menu>
    </item>




</menu>